tests/valid/SetComprehension_Valid_5.whiley
define nnint as [[int]]

{int} flattern([[int]] nnint):
    return { x | y in nnint, x in y }

void main([string] args):
    iis = [[1,2,3],[3,4,5]]
    is = flattern(iis)
    println(str(is))

