tests/invalid/ListDefine_CompileFail_1.whiley
define intset as [int]

void main([string] args):
     is = {1,2,3,4}
     print str(|il|)
     print str(is ∪ {5})
